--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,60 @@
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/ic_baseline_mic_24"
             app:layout_constraintHorizontal_bias="0.521" />
+
+    <TextView
+            android:text="@string/bienvenida"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_bienvenida_main"
+            android:fontFamily="@font/acme"
+            android:textSize="25sp"
+            android:padding="-20dp"
+            android:textColor="@color/blue_app"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="141dp"
+            android:layout_marginEnd="169dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="169dp"
+            android:layout_marginBottom="66dp"
+            app:layout_constraintBottom_toTopOf="@+id/text_instruccion_main" />
+
+    <TextView
+            android:text="@string/instruccion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_instruccion_main"
+            android:fontFamily="@font/acme"
+            android:textSize="18sp"
+            android:padding="-20dp"
+            android:textColor="@color/blue_app"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/text_bienvenida_main"
+            android:layout_marginEnd="64dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="65dp"
+            android:layout_marginBottom="237dp"
+            app:layout_constraintBottom_toTopOf="@+id/microButton"/>
+
+    <TextView
+            android:text="@string/instruccion2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/text_instruccion2_main"
+            android:fontFamily="@font/acme"
+            android:textSize="18sp"
+            android:padding="-20dp"
+            android:gravity="center"
+            android:textColor="@color/blue_app"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/text_bienvenida_main"
+            android:layout_marginEnd="64dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="65dp"
+            android:layout_marginBottom="237dp"
+            app:layout_constraintBottom_toTopOf="@+id/microButton"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
