--- a/app/src/main/res/layout/activity_imagen.xml
+++ b/app/src/main/res/layout/activity_imagen.xml
@@ -9,13 +9,31 @@
 
     <ImageView
             android:layout_width="360dp"
-            android:layout_height="718dp"
+            android:layout_height="512dp"
             app:srcCompat="@drawable/ic_baseline_question_mark_24"
             android:id="@+id/imagenGenerada"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.5"
+            app:layout_constraintVertical_bias="0.031"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textPrompt"
+            android:fontFamily="@font/acme"
+            android:textSize="25sp"
+            android:padding="-20dp"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="192dp"
+            android:layout_marginEnd="192dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/imagenGenerada"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="182dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
