--- a/app/src/main/res/layout/activity_imagen.xml
+++ b/app/src/main/res/layout/activity_imagen.xml
@@ -7,6 +7,19 @@
         tools:context=".ui.activities.ImagenActivity"
         android:background="@color/blue_app">
 
+
+    <ProgressBar
+            android:id="@+id/loading_spinner"
+            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large.Inverse"
+            android:layout_width="199dp"
+            android:layout_height="215dp"
+            android:layout_gravity="center"
+            android:backgroundTint="#FFFFFF"
+            app:layout_constraintTop_toTopOf="@+id/imagenGenerada"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
             android:layout_width="360dp"
             android:layout_height="512dp"
@@ -36,4 +49,22 @@
             app:layout_constraintTop_toBottomOf="@+id/imagenGenerada"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="182dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:tint="@color/white"
+            app:srcCompat="@drawable/ic_baseline_save_as_24"
+            android:id="@+id/idBotonGuardar"
+            app:backgroundTint="@color/blue_app"
+            android:layout_marginTop="128dp"
+            app:layout_constraintTop_toBottomOf="@+id/imagenGenerada"
+            android:layout_marginEnd="26dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="330dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="28dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
